--- a/Bubbles/style.css
+++ b/Bubbles/style.css
@@ -1,17 +1,28 @@
 body, html {
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #000;
+    overflow: hidden;
 }
 
 canvas {
     display: block;
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;
     background-color: #87CEEB;
     border: 2px solid black;
     box-sizing: border-box;
+    width: 50 rem;
+    height: 50 rem;
+    touch-action: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
+    outline: none;
 }
 
