--- a/Kong/style.css
+++ b/Kong/style.css
@@ -11,5 +11,7 @@ body {
 canvas {
   background-color: #000;
   display: block;
-  /* The width and height are set by JavaScript */
+  max-width: 100%;
+  max-height: 100%;
+  aspect-ratio: 1 / 1;
 }
